Bug 424884 - Places can lead to circular menus (r=mano)